CHANGES to the Geomview package.

Ver 3.9 (?? January 2001)
- Add documentation for the previous change.
- Draw intersection of the BBox for Ray_2 and Line_2.

Ver 3.8 (23 January 2001)
- Added (simple) operator<<() for Ray_[23] and Line_[23].

Ver 3.7 (7 December 2000)
- Added a member function get_new_id(string) to replace and generalize the
  per type counters used to get unique identifiers for geomview.
  It fixes the bug that you couldn't see several polyhedrons or triangulations
  at the same time.

Ver 3.6 (5 December 2000)
- Factorized code between Point_[23], Segment_[23] and Triangle_[23].
- Added some color to the kernel demo program.
- Added a wired flag, with the get/set functions.
- Use this flag in operator<<(Triangulations), and add a pointer in the doc.
- Demo program for triangulations/terrains.

Ver 3.5 (1 December 2000)
- New echo_flag boolean, that decides when a point Geomview gives us needs to
  be echoed to Geomview.
- Proper save and restore of the ascii/binary mode.
- in_binary_mode() -> get_binary_mode(), idem for ascii.
- set_binary_mode() now takes a parameter (default=true), and returns the old
  value.
- (echo "started") in your .geomview file is no longer necessary.

Ver 3.4 (29 November 2000)
- Removed the cruft about "ascii" and "binary" function pointers (beurk !).
- Added a raw mode, and use it internally : get_raw() and set_raw().
- More cleanup.

Ver 3.3 (29 November 2000)
- to_double -> CGAL::to_double.
- char * -> string.
- Got rid of some useless and deprecated strstreams.
- Fixed a bug in frame().
- Removed obsolete code concerning the very old (born dead) 3D triangulation.
- Do not submit test/Geomview/Makefile.
- New directory demo/Geomview.

Ver 3.2 (24 November 2000)
- Forgot to submit the test/ directory.

Ver 3.1 (24 November 2000)
- Removed obsolete constructor.
- Added a sleep(1) at initialization, to wait for Geomview to be ready
  (internally), because otherwise this prevents operator>>(Point) from working